adding .jar file